# gsheets-mcp

./: .gitignore  README.md  pyproject.toml  run_server.py
src/: __init__.py  server.py  sheets_client.py
tests/: test_sheets_client.py
